Исправил Swagger документацию
