# docs/swagger.yaml
@@ -137,45 +137,6 @@ paths:
     put:
       consumes:
       - application/json
-      description: Debiting funds from a reserve wallet
-      operationId: debiting-funds
-      parameters:
-      - description: How many funds to withdraw
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/balance.UpdateReserveWallet'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handler.statusResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-      summary: Debiting funds
-      tags:
-      - reserve wallet
-  /api/balance/withdraw:
-    put:
-      consumes:
-      - application/json
       description: Reserving money from the main account
       operationId: reserve-funds
       parameters:
@@ -209,6 +170,45 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: Reserve funds
+      tags:
+      - reserve wallet
+  /api/balance/withdraw:
+    put:
+      consumes:
+      - application/json
+      description: Debiting funds from a reserve wallet
+      operationId: debiting-funds
+      parameters:
+      - description: How many funds to withdraw
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/balance.UpdateReserveWallet'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.statusResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Debiting funds
       tags:
       - reserve wallet
   /auth/sign-up:
